# polaris-lang

./: .gitignore  ABOUT.md  CMakeLists.txt  Dockerfile  README.md
.polaris/stdlib/: math.pol
app/: main.cpp
cmake/: LibraryConfig.cmake
example/: CMakeLists.txt  external_app.cpp
generate/: version.pol.in
polaris/: cell.hpp  environment.cpp  environment.hpp  error.hpp  evaluator.cpp  evaluator.hpp  feeder.cpp  feeder.hpp  fwd.hpp  imports.cpp  imports.hpp  polaris.cpp  polaris.hpp
tests/: CMakeLists.txt  polaris_tests.cpp
